--- a/index.html
+++ b/index.html
@@ -1,50 +1,208 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+    <title>reveal.js</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+    <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/theme/moon.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+    <!-- Theme used for syntax highlighting of code -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+    <!-- Printing and PDF exports -->
+    <script>
+        var link = document.createElement('link');
+        link.rel = 'stylesheet';
+        link.type = 'text/css';
+        link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+        document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
+    <link rel="stylesheet" title="Solarized Dark" href="css/monokai-sublime.css">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+<div class="reveal">
+    <div class="slides">
+        <section><h1>Alpha2048 </h1><h4>Reinforcement learning in the browser</h4></section>
+        <section>
+            <h1>Lian Li</h1>
+            <section data-transition="slide-out">
+                <img data-src="assets/JS_341_sm.png" height="400">
+            </section>
+            <section data-transition="slide-in slide-out">
+                <div>
+                    <a href="https://twitter.com/Chimney42">
+                        <i class="fa fa-twitter"></i><span style="margin-left: 10px">@Chimney42</span>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://github.com/Chimney42">
+                        <i class="fa fa-github"></i><span style="margin-left: 10px">Chimney42</span>
+                    </a>
+                </div>
+            </section>
+            <section data-transition="slide-in">
+                <aside class="notes">
+                    I'm did not study AI or Computer Science, what I'm telling you is what I interpreted from the
+                    research I've done
+                    If I present a fact you object to, feel free to speak up.
+                </aside>
+                <p>Software Developer @ Datenfreunde</p>
+                <p>Machine Learning enthusiast</p>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h1>Threes</h1>
+                <img data-src="assets/Threes_video_game_trailer.gif">
+            </section>
+            <section>
+                <h1>Clones</h1>
+                <img data-src="assets/2048-clones.png" height="400">
+            </section>
+            <section>
+                <h1>Weird clones</h1>
+                <img data-src="assets/DOGE-2048.png" height="400">
+            </section>
+            <section>
+                <h1>2048</h1>
+                <img data-src="https://upload.wikimedia.org/wikipedia/commons/2/28/2048_finished_game.png"
+                     height="400">
+            </section>
+        </section>
+        <section>
+            <h1>Rules</h1>
+            <ul>
+                <li class="fragment">$ 4 \times 4 $ grid</li>
+                <li class="fragment">each turn take action $\alpha$; $\alpha \in \big\{ 0, 1, 2, 3 \big\} $</li>
+                <li class="fragment">merge two tiles with same value $v \rightarrow$ one tile with the value $2v$</li>
+                <li class="fragment"><i class="fa fa-times"></i>: no more moves are possible</li>
+                <li class="fragment"><i class="fa fa-check"></i>: one tile with 2048 present</li>
+                <li class="fragment"><i class="fa fa-trophy"></i>: tiles with value $v$ are merged $ \rightarrow 2v$ is added to score</li>
+            </ul>
+        </section>
+        <section>
+            <h1>Alpha2048</h1>
+            <p class="fragment">JavaScript</p>
+            <p class="fragment">Supervised Learning</p>
+            <p class="fragment">Tile rating = $\sum values \over count$</p>
+        </section>
+        <section>
+            <section>
+                <h1><a href="https://github.com/cazala/synaptic">synaptic</a></h1>
+                <p class="fragment">neural network library for javascript</p>
+                <p class="fragment">classification</p>
+                <p class="fragment"><a href="https://github.com/Chimney42/positronic-brain">prior experience</a></p>
+            </section>
+            <section>
+                <h1>First iteration</h1>
+                <p class="fragment">Goal: gather data</p>
+                <ol>
+                    <li class="fragment">simulate each of the possible directions from current boardstate</li>
+                    <li class="fragment">evaluate whether boardstate rating increases</li>
+                    <li class="fragment">make random move</li>
+                </ol>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+                <pre class="fragment" ><code class="javascript" data-trim>
+                    {
+                        boardstate : [0, 2, 0, ..., 8],
+                        actions : [0, 1, 0, 1]
+                    }
+                </code></pre>
+            </section>
+            <section>
+                <h1>Second iteration</h1>
+                <p class="fragment">Goal: compare trained network</p>
+                <ol>
+                    <li class="fragment">train neural network to predict probability of increased rating</li>
+                    <li class="fragment">make move with highest probability</li>
+                </ol>
+            </section>
+            <section>
+                <h1>Comparison</h1>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>Random</th>
+                        <th>Trained</th>
+                    </tr>
+                    <tr>
+                        <td>Highest rating</td>
+                        <td>55.25</td>
+                        <td>51.8</td>
+                    </tr>
+                    <tr>
+                        <td>Highest tile value</td>
+                        <td>256</td>
+                        <td>256</td>
+                    </tr>
+                    <tr>
+                        <td>Most moves per game</td>
+                        <td>324</td>
+                        <td>295</td>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <h1>Conclusion</h1>
+                <p class="fragment">Did not work great</p>
+                <p class="fragment">only next move</p>
+                <p class="fragment">needed more farsightedness</p>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h1>Temporal Difference Learning</h1>
+                <p class="fragment">successive states which correlate</p>
+                <p class="fragment">reinforcement learning</p>
+            </section>
+            <section>
+                <h1><a href="http://cs.stanford.edu/people/karpathy/reinforcejs/">REINFORCEjs</a></h1>
+                <p class="fragment">Model-free (kinda)</p>
+                <p class="fragment">reward / reinforcement value</p>
+                <pre class="fragment"><code class="javascript" data-trim>
+                    const state = [0, 2, 2, ..., 0];
+                    const action = agent.act(state);
+                    const reward = calculateReward();
+                    agent.learn(reward);
+                </code></pre>
+            </section>
+        </section>
+        <section>
+            <p><a href="https://github.com/gabrielecirulli/2048">Open Source 2048</a></p>
+            <p>
+                <a href="https://docs.google.com/presentation/d/1I9RS3SMdMp8Uk9C6eyS6jK_w_34BKCrvkN-kWau1MU4/edit#slide=id.g12f609b381_0_0">Deep
+                    Reinforcement Learning 2048 with Python</a></p>
+            <p><a href="https://github.com/shalinguyen/socialicious">Icons by socialicious</a></p>
+            <p><a href="https://github.com/hakimel/reveal.js">Presentation with reveal.js</a></p>
+        </section>
+    </div>
+</div>
 
-		<script>
-			// More info https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				history: true,
+<script src="lib/js/head.min.js"></script>
+<script src="js/reveal.js"></script>
 
-				// More info https://github.com/hakimel/reveal.js#dependencies
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+<script>
+    // More info https://github.com/hakimel/reveal.js#configuration
+    Reveal.initialize({
+        history: true,
+
+        // More info https://github.com/hakimel/reveal.js#dependencies
+        dependencies: [
+            {src: 'plugin/markdown/marked.js'},
+            {src: 'plugin/markdown/markdown.js'},
+            {src: 'plugin/notes/notes.js', async: true},
+            {
+                src: 'plugin/highlight/highlight.js', async: true, callback: function () {
+                hljs.initHighlightingOnLoad();
+            }
+            },
+            { src: 'plugin/math/math.js', async: true }
+        ]
+    });
+</script>
+</body>
 </html>
