add missing rule

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                 <h2> 4 x 4 - grid</h2>
             </section>
             <section data-transition="slide-in slide-out">
-                <div>
                     <h2>each turn take action $\alpha$; $\alpha \in \big\{ 0, 1, 2, 3 \big\} $</h2>
-                </div>
             </section>
             <section data-transition="slide-in slide-out">
-                <div>
+                    <h2>after move, new tile added to empty space </h2>
+                <h4>(90% $v=2$, 10% $v=4$)</h4>
+            </section>
+            <section data-transition="slide-in slide-out">
                     <h2>merge two tiles with value $v \rightarrow$ one tile with value $2v$</h2>
-                </div>
             </section>
             <section data-transition="slide-in slide-out">
                 <h2><i class="fa fa-times"></i> no more moves are possible</h2>
