--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <img data-src="assets/DOGE-2048.png" height="400">
             </section>
             <section data-transition="slide-in" style="margin-top: 75px">
-                <img data-src="https://upload.wikimedia.org/wikipedia/commons/2/28/2048_finished_game.png"
+                <img data-src="assets/2048.png"
                      height="500">
             </section>
         </section>
@@ -200,6 +200,7 @@
             <section data-transition="slide-in">
                 <aside class="notes">
                     extension of markov chain. If any state only allowed one action and all rewards are the same, mdp would reduce to mc
+                    chain is set from the beginning, not dependent on decision making
                 </aside>
                 <h2>markov decision process</h2>
             </section>
@@ -318,6 +319,34 @@
             </section>
         </section>
         <section>
+            <h1>Conclusion</h1>
+            <section data-transition="slide-out"></section>
+            <section data-transition="slide-in slide-out">
+                <aside class="notes">
+                    There seems to be an upwards trend
+                </aside>
+                <h2>seems to be learning</h2>
+            </section>
+            <section data-transition="slide-in slide-out">
+                <aside class="notes">
+                    but I'm guessing that the min or max learnability is capped
+                </aside>
+                <h2>but...</h2>
+            </section>
+            <section data-transition="slide-in slide-out">
+                <aside class="notes">
+                    The board fills up, and the higher you go, the longer you play, the harder it is. System might not be able to understand these intricacies
+                </aside>
+                <h2>boardsize</h2>
+            </section>
+            <section data-transition="slide-in slide-out">
+                <h2>flat input</h2>
+            </section>
+            <section data-transition="slide-in slide-out">
+                <h2>one hidden layer</h2>
+            </section>
+        </section>
+        <section>
             <h1>Next</h1>
             <section data-transition="slide-out"></section>
             <section data-transition="slide-in slide-out">
@@ -346,6 +375,9 @@
                 <h2>python</h2>
             </section>
             <section data-transition="slide-in slide-out">
+                <aside class="notes">
+                    With a convolutional network, I'd be able to adress the flat input problem
+                </aside>
                 <h2>Convolutional network</h2>
             </section>
         </section>
