--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <h2>Did not work great</h2>
             </section>
             <section data-transition="slide-in slide-out">
-                <h2>focus only on next state</h2>
+                <h2>emulates given strategy</h2>
             </section>
             <section data-transition="slide-in slide-out">
                 <h2>needs more foresight</h2>
