last min changes

--- a/index.html
+++ b/index.html
@@ -29,14 +29,7 @@
         <section>
             <h1>Alpha2048 </h1><h3>Reinforcement learning in the browser</h3>
             <aside class="notes">
-                I'm deeply humbled and somewhat intimidated by being here amidst all you machine learning experts.
-                I am, by which I mean I work as a software developer.
-                Machine Learning is somewhat of a hobby and this is the story of how I tried to build an intelligent
-                system,
-                which could learn a game the old trial and error way.
-                When I researched different learning algorithms, sometimes I wasn't 100% clear on the theory or math
-                behind it.
-                So if I say something you object to, please let me now.
+                case study
             </aside>
         </section>
         <section>
@@ -57,7 +50,7 @@
                 </h2>
             </section>
             <section data-transition="slide-in slide-out">
-                <h2>Software Developer @ Datenfreunde</h2>
+                <h2>Software Engineer / Data Scientist @ Datenfreunde</h2>
             </section>
             <section data-transition="slide-in">
                 <h2>Machine Learning enthusiast</h2>
