--- a/index.html
+++ b/index.html
@@ -319,9 +319,11 @@
         </section>
         <section>
             <section>
+                <h3>Random</h3>
                 <img src="assets/random.gif">
             </section>
             <section>
+                <h3>Trained</h3>
                 <img src="assets/trained.gif">
             </section>
         </section>
