extra slides about me

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 <img data-src="assets/JS_341_sm.png" height="400" style="margin-top: 100px">
             </section>
             <section data-transition="slide-in slide-out">
+                <img data-src="assets/table_desk_dk-03.jpg" height="400" style="margin-top: 100px">
+            </section>
+            <section data-transition="slide-in slide-out">
+                <img data-src="assets/lianli_headline.png" height="400" style="margin-top: 100px">
+            </section>
+            <section data-transition="slide-in slide-out">
                 <h2>
                     <a href="https://twitter.com/Chimney42">
                         <i class="fa fa-twitter"></i><span style="margin-left: 10px">@Chimney42</span>
